--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,10 +22,13 @@ jobs:
     - name: Install dependencies
       run: |
         npm ci || npm install
-        npx jest --version
-      
+        
     - name: Run linting
-      run: npm run lint
+      run: |
+        # Attempt to fix auto-fixable issues
+        npm run lint -- --fix || true
+        # Run lint check
+        npm run lint
       
     - name: Run tests
       run: npm test
@@ -38,13 +41,17 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+        cache: 'npm'
+    
+    - name: Install dependencies
+      run: npm ci
       
-    - name: Build and test application
-      run: |
-        npm ci
-        npm run build
+    - name: Build application
+      run: npm run build
         
   deploy:
     needs: build-and-push
