--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,11 +24,7 @@ jobs:
         npm ci || npm install
         
     - name: Run linting
-      run: |
-        # Attempt to fix auto-fixable issues
-        npm run lint -- --fix || true
-        # Run lint check
-        npm run lint
+      run: npm run lint
       
     - name: Run tests
       run: npm test
@@ -64,8 +60,7 @@ jobs:
     - name: Deploy to Vercel
       uses: amondnet/vercel-action@v20
       with:
-        vercel-token: ${{ secrets.VERCEL_TOKEN }}
+        vercel-token: ${{ secrets.VERCEL_TOKEN }} # Changed from zeit-token
         vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
         vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-        working-directory: ./
 
